--- a/play_all.yml
+++ b/play_all.yml
@@ -10,5 +10,5 @@
 - import_playbook: configure_ngninx_app.yml
 - import_playbook: jenkins_plugin_maven.yml
 - import_playbook: configure_git.yml
-
+- import_playbook: git_pull.yml
 - import_playbook: configure_jenkins_job.yml
